--- a/app/views/requests.xml
+++ b/app/views/requests.xml
@@ -1,28 +1,21 @@
 <Alloy>
-	<Window class="container" id="requestWin">
+	<Window class="container" id="requestWin" onOpen="loadRequests">
 		<ListView defaultItemTemplate="template" id="listView">
 			<Templates>
 				<ItemTemplate name="template">
 					<View id='outer'>
-						<ImageView id="friendImg"/>
-						<Label id="friendName"></Label>
-						<View id="accept">
+						<ImageView id="friendImg" bindId="friendImg"/>
+						<Label id="friendName" bindId="friendName"></Label>
+						<View id="accept" onClick="acceptingRequest">
 							<Label id="acceptLabel"></Label>
 						</View>
-						<View id="deleteBtn">
+						<View id="deleteBtn" onClick="deletingRequest">
 							<Label id="deleteLabel"></Label>
 						</View>
 					</View>
 				</ItemTemplate>
 			</Templates>
-			<ListSection id="section">
-				<ListItem />
-				<ListItem />
-				<ListItem />
-				<ListItem />
-				<ListItem />
-				<ListItem />
-			</ListSection>
+			<ListSection id="section"></ListSection>
 		</ListView>
 	</Window>
 </Alloy>
