--- a/app/views/userRegisteration.xml
+++ b/app/views/userRegisteration.xml
@@ -1,16 +1,45 @@
+<!-- <Alloy>
+<Window class="userRegWin" id="userWind">
+<CardView class="container">
+<Label id="title"></Label>
+<Widget src="input-materialdesign" id="name"/>
+<Widget src="input-materialdesign" id="email"/>
+<Widget src="input-materialdesign" id="password"/>
+<View id="photoView" onClick="openGallery">
+<Label id="photoIcon"></Label>
+</View>
+<View id="loginBtn" onClick="createUser">
+<Label id="loginBtnLabel">Create User</Label>
+</View>
+</CardView>
+</Window>
+</Alloy> -->
 <Alloy>
-	<Window class="userRegWin" id="userWind">
-		<CardView class="container">
-			<Label id="title"></Label>
-			<Widget src="input-materialdesign" id="name"/>
-			<Widget src="input-materialdesign" id="email"/>
-			<Widget src="input-materialdesign" id="password"/>
-			<View id="photoView" onClick="openGallery">
-				<Label id="photoIcon"></Label>
+	<Window id="userWind" class="userRegWin">
+		<ScrollView id="scrollView">
+			<ImageView id="topImg"/>
+			<View id="content">
+				<View id="nameView">
+					<Label id="nameIcon"></Label>
+					<TextField id="name" />
+				</View>
+				<View id="usernameView">
+					<Label id="userIcon"></Label>
+					<TextField id="username" />
+				</View>
+				<View id="passwordView">
+					<Label id="passwordIcon"></Label>
+					<TextField id="password" />
+				</View>
+				<View id="photoView" onClick="openGallery">
+					<Label id="photoIcon"></Label>
+				</View>
+				<Button id="loginBtn" onClick="createUser">Create User</Button>
+				<View id="question">
+					<Label id="questionLabel">Do You Have Already an Account?</Label>
+					<Label id="signin" onClick="login">SIGN IN</Label>
+				</View>
 			</View>
-			<View id="loginBtn" onClick="createUser">
-				<Label id="loginBtnLabel">Create User</Label>
-			</View>
-		</CardView>
+		</ScrollView>
 	</Window>
 </Alloy>
