--- a/app/views/userProfile.xml
+++ b/app/views/userProfile.xml
@@ -13,7 +13,7 @@
 			<View id="emailContainer">
 				<View id="innerEmailContainer">
 					<Label id="emailIcon" text="mail"></Label>
-					<Label id="email"></Label>
+					<Label id="email" onClick="logout">Logout</Label>
 				</View>
 			</View>
 			<View id="line"></View>
