--- a/app/views/about.xml
+++ b/app/views/about.xml
@@ -1,10 +1,9 @@
 <Alloy>
 	<View id="container">
-	<View id="topView">
+		<View id="topView">
 			<View id="userInfo">
 				<Label id="title">Live Music with Indian Ocean</Label>
 			</View>
-			
 			<View id="leftCircle"></View>
 			<View id="rightCircel"></View>
 			<View id="photoContainer">
@@ -15,35 +14,63 @@
 		</View>
 		<ScrollView id="scrollView">
 			<CardView id="happeningDesc">
-				<Label id="details" class="desc"></Label>
+				<Label id="descTitle">Description:</Label>
+				<TextArea id="details"></TextArea>
+				<Label id="detailsLabel" class="desc">Description for happening</Label>
 			</CardView>
-			
 			<CardView id="happeningInfo">
-				<View id="createdDate">
+				<View class="fieldsContainer" id="nameView">
 					<Label id="dateIcon"></Label>
-					<Label id="dateLabel">22 May 2019 07:00 PM onward</Label>
+					<TextField id="nameTextField" class="textField" hintText="Name"></TextField>
+					<Label id="nameLabel" class="labels">Happening Name</Label>
 				</View>
-				<View id="locationView">
+				<View id="createdDate" class="fieldsContainer">
+					<Label id="dateIcon"></Label>
+					<TextField id="dateTextField" class="textField"></TextField>
+					<Label id="dateLabel" class="labels">22 May 2019 07:00 PM onward</Label>
+				</View>
+				<View id="locationView" class="fieldsContainer">
 					<Label id="locationIcon"></Label>
-					<Label id="locationLabel">Melbourn, Australia</Label>
+					<TextField id="locationTextField" class="textField"></TextField>
+					<Label id="locationLabel" class="labels">Melbourn, Australia</Label>
 				</View>
-				<View id="budgetView">
+				<View id="budgetView" class="fieldsContainer">
 					<Label id="budgetIcon"></Label>
-					<Label id="budgetLabel">Budget: 2005</Label>
+					<TextField id="budgetTextField" class="textField"></TextField>
+					<Label id="budgetLabel" class="labels">Budget: 2005</Label>
 				</View>
-				<View id="bookingView">
+				<View id="bookingView" class="fieldsContainer">
 					<Label id="bookingIcon"></Label>
-					<Label id="bookingLabel">Booking/Reservation</Label>
+					<Label id="bookingLabel" class="labels">Booking/Reservation</Label>
 				</View>
-				
+
 			</CardView>
 			<!-- <View id="buttons">
-				<Label id="rsvp">RSVP</Label>
-				<View id="btnContainer">
-					<Button id="yes"></Button>
-					<Button id="no"></Button>
-				</View>
+			<Label id="rsvp">RSVP</Label>
+			<View id="btnContainer">
+			<Button id="yes"></Button>
+			<Button id="no"></Button>
+			</View>
 			</View> -->
+			<View id="accessibilityContainer">
+				<View id="publicContainer" onClick="publicClicked">
+					<Label id="publicLabel">Public</Label>
+					<ImageView id="publicRadio" />
+				</View>
+				<View id="privateContainer" onClick="privateClicked">
+					<Label id="privateLabel">Private</Label>
+					<ImageView id="privateRadio" />
+				</View>
+			</View>
+			<View id="happeningPhotoView">
+				<View id="photoUpload" onClick="uploadPhoto">
+					<Label id="photoIcon"></Label>
+					<Label id="uploadLabel"></Label>
+				</View>
+				<View id="showPhoto">
+					<ImageView id="photo" />
+				</View>
+			</View>
 			<View id="participantView">
 				<Label id="participantLabel">Participants</Label>
 				<View id="participantPhoto">
@@ -51,7 +78,10 @@
 				</View>
 				<Label id="addIcon"></Label>
 			</View>
-			
+			<View id="saveView" onClick="saveHappening">
+				<Button id="saveBtn"></Button>
+			</View>
+
 		</ScrollView>
-		</View>
+	</View>
 </Alloy>
