--- a/app/views/happening.xml
+++ b/app/views/happening.xml
@@ -1,26 +1,33 @@
 <Alloy>
 	<Window class="happeningWin" id="happeningWin">
-		<ScrollView id="scrollView">
-			<View id="topView">
-				<Label id="title">New Happening</Label>
-				<View id="line"></View>
-				<View id="leftCircle"></View>
-				<View id="rightCircel"></View>
+		<View id="topView">
+			<View id="userInfo">
+				<Label id="title">Create New Happening</Label>
 			</View>
-			<View id="content">
-				<View id="happeningName">
-					<TextField id="happeningTextField" />
+			<View id="leftCircle"></View>
+			<View id="rightCircel"></View>
+			<View id="photoContainer">
+				<View id="profilePhoto">
+					<ImageView id="profileImg" />
 				</View>
-				<View id="details">
-					<TextArea id="detailsTextField" />
+			</View>
+		</View>
+		<ScrollView id="scrollView">
+			<CardView id="happeningInfo">
+				<View class="textFieldContainer">
+					<Label class="textFieldLabel">Name:</Label>
+					<TextField id="happeningTextField" class="textField" />
 				</View>
-				<View id="location">
-					<TextField id="locationTextField" />
+				<View class="textFieldContainer">
+					<Label class="textFieldLabel">Location:</Label>
+					<TextField id="locationTextField" class="textField"/>
 				</View>
-				<View id="budget">
-					<TextField id="budgetTextField" />
+				<View class="textFieldContainer">
+					<Label class="textFieldLabel">Budget:</Label>
+					<!-- <Widget src="input-materialdesign" id="budgetTextField" /> -->
+					<TextField id="budgetTextField" class="textField"/>
 				</View>
-				<View id="priContainer">
+				<View class="textFieldContainer">
 					<View id="publicContainer" onClick="publicClicked">
 						<Label id="publicLabel">Public</Label>
 						<ImageView id="publicRadio" />
@@ -30,12 +37,19 @@
 						<ImageView id="privateRadio" />
 					</View>
 				</View>
+				<View class="textFieldContainer">
+					<Label id="detailsTitle" class="textFieldLabel">Description:</Label>
+					<TextArea id="detailsTextField"></TextArea>
+				</View>
 				<View id="photoView" onClick="openGallery">
 					<Label id="cameraIcon"></Label>
 				</View>
 				<Button id="saveBtn" onClick="createHappening">Save</Button>
-				<View height="3dp" top="3dp"></View>
-			</View>
+				
+
+			</CardView>
+					<View height="10dp" width="100%" bottom="3dp"></View>
 		</ScrollView>
+
 	</Window>
 </Alloy>
